2007-07-22  Simon Griph  <simon(at)griph(dot)se>

	* FvwmButtons/FvwmButtons.c (Loop):
	(reallyLeaveWindow):
	don't ignore LeaveNotify when the pointer moves
	from a swallowed window to an overlaping window.

2007-07-22  Simon Griph  <simon(at)griph(dot)se>

	* FvwmButtons/FvwmButtons.c (handle_new_position):
	make container specific ActiveColorset work without
	ActiveIcon/ActiveTitle.

2007-06-17  Simon Griph  <simon(at)griph(dot)se>

	* FvwmAnimate/Makefile.am (LDADD):
	* FvwmBanner/Makefile.am (LDADD):
	* FvwmButtons/Makefile.am (LDADD):
	* FvwmIconBox/Makefile.am (LDADD):
	* FvwmPager/Makefile.am (LDADD):
	* FvwmProxy/Makefile.am (LDADD):
	* FvwmScript/Makefile.am (LDADD):
	* FvwmTaskBar/Makefile.am (LDADD):
	* FvwmWharf/Makefile.am (LDADD):
	added Xcursor_LIBS

2007-07-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* FvwmCommand/FvwmCommand.c (main):
	don't core dump on undeterminable name

2007-06-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmPager/x_pager.c (MoveStickyWindows):
	properly handle StickyAcrossPages

2007-05-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* FvwmTaskBar/Goodies.c:
	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmPager/x_pager.c:
	* FvwmPager/FvwmPager.h:
	* FvwmIconMan/readconfig.c:
	* FvwmForm/ReadXServer.c:
	* FvwmForm/FvwmForm.c:
	* FvwmDragWell/fvwmDragWell.c:
	* FvwmCommand/fifos.c:
	* FvwmCommand/FvwmCommand.h:
	* FvwmButtons/FvwmButtons.c:
	* FvwmBacker/FvwmBacker.c:
	cleanup prototypes

2007-05-27  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* FvwmConsole/getline.c (get_line):
	enable build using BSD libedit compatible readline (Mac OS)
	load the most recent commands if more than HISTSIZE commands in history

2007-05-13  Jason Weber  <baboon@imonk.com>

	* FvwmProxy/FvwmProxy.c:
	prefixed position arguments with + for Move and ResizeMove commands

2007-02-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* FvwmButtons/draw.c (RedrawButton):